[package]
name = "gameloop"
description = "deWiTTERS game loop."
version = "0.2.0"
authors = ["Dom Williams <me@domwillia.ms>"]
edition = "2018"
repository = "https://github.com/DomWilliams0/gameloop-rs"
homepage = "https://github.com/DomWilliams0/gameloop-rs"
license = "MIT"
readme = "README.md"
keywords = ["gamedev", "gameloop", "dewitters", "timestep", "interpolation"]
categories = ["game-development", "game-engines", "games"]

[dependencies]
log = "0.4"
